commit my changes

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="./landing.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="./pages/about.html">About</a>
-        <a class="nav-item nav-link" href="./pages/contact.html">Contact</a>
-        <a class="nav-itme nav-link" href="./pages/resume.html">Resume</a>
-        <a class="nav-itme nav-link" href="./pages/gallery.html">Gallery</a>
+        <a class="nav-item nav-link active" href="./pages/landing.html"style="color:rgb(76, 76, 138);font-weight: bold;">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="./pages/about.html" style="color:black; font-weight: bold;">About</a>
+        <a class="nav-item nav-link" href="./pages/contact.html"style="color:black; font-weight: bold;">Contact</a>
+        <a class="nav-itme nav-link" href="./pages/resume.html"style="color:black; font-weight: bold;">Resume</a>
+        <a class="nav-itme nav-link" href="./pages/gallery.html"style="color:black; font-weight: bold;">Gallery</a>
       </div>
     </div>
   </nav>
@@ -30,7 +30,7 @@
 
 
 
-  <img src="./myProfilepic.png" style="width: 70px;margin-top: 60px; border-radius: 25px;height: 70px;margin-left: 20px;float: right;">
+  <img src="./myProfilepic.png" style="width: 200px;margin-top: 60px;border:3px solid rgb(112, 122, 112);height: 200px;margin-right: 20px;float: right;">
   <h1>I am Fidele, Student at Austin Coding Academy</h1>
   <h2>Web Development</h2>
   <P>
@@ -46,66 +46,63 @@
     <i class="fa fa-instagram"style="font-size:24px"></i>
     <i class="fa fa-linkedin" style="font-size:24px" ></i> 
   </div>
-  <div class="image">
-  
- </div>
 <header><h1>Projects</h1></header>
 <section  class="main">
   <a href="">
      <div class="container">
        <img src="./picture/2.jpg" alt="" class="image" style="width: 200px">
        <div class="middle">
-         <div class="text">Lorem ipsum dolor</div>
+         <div class="text">My portofolio</div>
          <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
        </div>
      </div> 
      </a>
-     <a href="./portofolio.html">
+     <a href="https://fidelis0788.github.io/ACA_web101_fidele_maniragaba/">
      <div class="container">
        <img src="./picture/4.jpg" alt="" class="image" style="width:200px">
        <div class="middle">
-         <div class="text">Lorem ipsum dolor 
+         <div class="text">Portofolio</div> 
            <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
            </div>
        </div>
      
      </div>
      </a>
-     <a href="">
+     <a href="https://fidelis0788.github.io/Nasa-contact-page-3/">
      <div class="container">
        <img src="./picture/6.jpg" alt="" class="image" style="width:200px">
        <div class="middle">
-         <div class="text">Lorem ipsum dolor
+         <div class="text">Nasa Contact Page </div>
      <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
          </div>
        </div>
      </div>
    </a>
-   <a href="">
+   <a href="https://fidelis0788.github.io/hair-saloon-webside/">
      <div class="container">
        <img src="./picture/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="" class="image" style="width:200px">
        <div class="middle">
-         <div class="text">Lorem ipsum dolor</div>
+         <div class="text">hair Saloon website</div>
          <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
        </div>
      </div>
      </a>
-     <a href="">
+     <a href="https://fidelis0788.github.io/101-AnimatePractice/">
      <div class="container">
        <img src="./picture/igor-miske-JVSgcV8_vb4-unsplash.jpg" alt="" class="image" style="width:200px">
        <div class="middle">
          <div class="text">
-          CHECK THIS OUT !</div>
+          Animate</div>
           <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
        </div>
      </div>
      </a>
-     <a href="">
+     <a href="https://fidelis0788.github.io/calculator-app-101/">
          <div class="container">
            <img src="./picture/igor-miske-JVSgcV8_vb4-unsplash.jpg" alt="" class="image" style="width:200px">
            <div class="middle">
              <div class="text">
-              CHECK THIS OUT !</div>
+              Calculator app</div>
               <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
            </div>
          </div>
