--- a/pages/about.html
+++ b/pages/about.html
@@ -16,11 +16,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="./landing.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="./about.html">About</a>
-          <a class="nav-item nav-link" href="./contact.html">Contact</a>
-          <a class="nav-itme nav-link" href="./resume.html">Resume</a>
-          <a class="nav-itme nav-link" href="./gallery.html">Gallery</a>
+          <a class="nav-item nav-link " href="./landing.html"style="color:black;font-weight: bold;" >Home </a>
+          <a class="nav-item nav-link active" href="./about.html"style="color:rgb(76, 76, 138); font-weight: bold;">About<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="./contact.html"style="color:black; font-weight: bold;">Contact</a>
+          <a class="nav-itme nav-link" href="./resume.html"style="color:black; font-weight: bold;">Resume</a>
+          <a class="nav-itme nav-link" href="./gallery.html"style="color:black; font-weight: bold;">Gallery</a>
         </div>
       </div>
     </nav>
@@ -43,5 +43,8 @@
         <i class="fa fa-google-plus"style="font-size:24px"></i>
         <i class="fa fa-pinterest"></i> 
 </section>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
