--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -14,11 +14,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="./landing.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="./about.html">About</a>
-            <a class="nav-item nav-link" href="./contact.html">Contact</a>
-            <a class="nav-link" href="./resume.html" >Resume</a>
-            <a class="nav-link" href="./gallery.html" >Gallery</a>
+            <a class="nav-item nav-link active" href="./landing.html"style="color:black; font-weight: bold;">Home </a>
+            <a class="nav-item nav-link" href="./about.html"style="color:black; font-weight: bold;">About</a>
+            <a class="nav-item nav-link" href="./contact.html"style="color:black; font-weight: bold;">Contact</a>
+            <a class="nav-link" href="./resume.html"style="color:black; font-weight: bold;">Resume</a>
+            <a class="nav-link active" href="./gallery.html" style="color:rgb(76, 76, 138); font-weight: bold;">Gallery<span class="sr-only">(current)</span></a>
           </div>
         </div>
       </nav>
