--- a/pages/landing.html
+++ b/pages/landing.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="./landing.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="./pages/about.html">About</a>
+        <a class="nav-item nav-link" href="./about.html">About</a>
         <a class="nav-item nav-link" href="./contact.html">Contact</a>
         <a class="nav-itme nav-link" href="./resume.html">Resume</a>
         <a class="nav-itme nav-link" href="./gallery.html">Gallery</a>
