commit my changes

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link " href="./landing.html"style="color:black;font-weight: bold;" >Home </a>
+          <a class="nav-item nav-link " href="./index.html"style="color:black;font-weight: bold;" >Home </a>
           <a class="nav-item nav-link active" href="./about.html"style="color:rgb(76, 76, 138); font-weight: bold;">About<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="./contact.html"style="color:black; font-weight: bold;">Contact</a>
           <a class="nav-itme nav-link" href="./resume.html"style="color:black; font-weight: bold;">Resume</a>
