--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="./pages/landing.html"style="color:rgb(76, 76, 138);font-weight: bold;">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="./index.html"style="color:rgb(76, 76, 138);font-weight: bold;">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="./pages/about.html" style="color:black; font-weight: bold;">About</a>
         <a class="nav-item nav-link" href="./pages/contact.html"style="color:black; font-weight: bold;">Contact</a>
         <a class="nav-itme nav-link" href="./pages/resume.html"style="color:black; font-weight: bold;">Resume</a>
