--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -14,7 +14,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="./landing.html"style="color:black; font-weight: bold;">Home </a>
+            <a class="nav-item nav-link active" href="./index.html"style="color:black; font-weight: bold;">Home </a>
             <a class="nav-item nav-link" href="./about.html"style="color:black; font-weight: bold;">About</a>
             <a class="nav-item nav-link" href="./contact.html"style="color:black; font-weight: bold;">Contact</a>
             <a class="nav-link" href="./resume.html"style="color:black; font-weight: bold;">Resume</a>
