--- a/pages/resume.html
+++ b/pages/resume.html
@@ -21,7 +21,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link " href="./landing.html"style="color:black; font-weight: bold;">Home </a>
+        <a class="nav-item nav-link " href="./index.html"style="color:black; font-weight: bold;">Home </a>
             <a class="nav-item nav-link" href="./about.html"style="color:black; font-weight: bold;">About</a>
             <a class="nav-item nav-link" href="./contact.html"style="color:black; font-weight: bold;">Contact</a>
             <a class="nav-link active" href="./resume.html"style="color:rgb(76, 76, 138); font-weight: bold;">Resume<span class="sr-only">(current)</span></a>
