--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,10 +28,11 @@
       </div>
     </div>
   </nav>
+  <h1>LET'S KEEP IN TOUCH</h1>
        <form> 
             <section class="has form">
-               <h1>LET'S KEEP IN TOUCH</h1>
-            <form action="/action_page">
+               
+            <form action="actionpage">
                 <input type="text" id= Name value="Name" style="width: 600px;height:50px;">
               </p>
               <p>
