commit my changes

--- a/pages/index.html
+++ b/pages/index.html
@@ -30,7 +30,7 @@
 
 
 
-  <img src="./myProfilepic.png" style="width: 200px;margin-top: 60px;border:3px solid rgb(112, 122, 112);height: 200px;margin-right: 20px;float: right;">
+  <img src="./myProfilepic.png" style="width: 200px;margin-top: 60px;border-radius: 100px ;border:3px solid rgb(112, 122, 112);height: 200px;margin-right: 20px;float: right;">
   <h1>I am Fidele, Student at Austin Coding Academy</h1>
   <h2>Web Development</h2>
   <P>
