--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
           <a class="nav-item nav-link active" href="./about.html"style="color:rgb(76, 76, 138); font-weight: bold;">About<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="./contact.html"style="color:black; font-weight: bold;">Contact</a>
           <a class="nav-itme nav-link" href="./resume.html"style="color:black; font-weight: bold;">Resume</a>
-          <a class="nav-itme nav-link" href="./gallery.html"style="color:black; font-weight: bold;">Gallery</a>
+          <a class="nav-itme nav-link" href="./gallery.html"style="color:black; font-weight: bold;">Portofolio</a>
         </div>
       </div>
     </nav>
