--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,7 +24,7 @@
         <a class="nav-item nav-link" href="./about.html"style="color:black; font-weight: bold;">About</a>
         <a class="nav-item nav-link active" href="./contact.html"style="color:rgb(76, 76, 138); font-weight: bold;">Contact <span class="sr-only">(current)</span></a>
         <a class="nav-itme nav-link" href="./resume.html"style="color:black; font-weight: bold;">Resume</a>
-        <a class="nav-itme nav-link" href="./gallery.html"style="color:black; font-weight: bold;">Gallery</a>
+        <a class="nav-itme nav-link" href="./gallery.html"style="color:black; font-weight: bold;">portofolio</a>
       </div>
     </div>
   </nav>
