--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="nav-item nav-link" href="./pages/about.html" style="color:black; font-weight: bold;">About</a>
         <a class="nav-item nav-link" href="./pages/contact.html"style="color:black; font-weight: bold;">Contact</a>
         <a class="nav-itme nav-link" href="./pages/resume.html"style="color:black; font-weight: bold;">Resume</a>
-        <a class="nav-itme nav-link" href="./pages/gallery.html"style="color:black; font-weight: bold;">Gallery</a>
+        <a class="nav-itme nav-link" href="./pages/gallery.html"style="color:black; font-weight: bold;">portofolio</a>
       </div>
     </div>
   </nav>
