--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,18 +33,18 @@
             <section class="has form">
                
             <form action="actionpage">
-                <input type="text" id= Name value="Name" style="width: 600px;height:50px;">
+                <input type="text" id= Name value="Name">
               </p>
               <p>
-                <input type="text"id="Email" value="Email" style="width: 600px;height:50px;"></p>
+                <input type="text"id="Email" value="Email" ></p>
               </p>
               <p>
-              <input type="text" id="adress" value="Adress" style="width: 600px;height:50px;">
+              <input type="text" id="adress" value="Adress">
               </p>
-             <p><input type="text" value="phone number" style="width: 600px;height:50px;"></p> <br> 
-            <input type="text" value=Message style="width: 600px;height: 100px;">
+             <p><input type="text" value="phone number" ></p> <br> 
+            <input type="text" value=Message >
              <label for="textarea"></label> </label><br>
-             <input type="submit" value="send">
+             <input type="submit" value="send" style="width: 70px;font-size: 10px;text-align: center;">
     </form>
   </section> 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
