--- a/pages/index.html
+++ b/pages/index.html
@@ -21,15 +21,30 @@
         <a class="nav-item nav-link" href="./contact.html"style="color:black; font-weight: bold;">Contact</a>
         <a class="nav-itme nav-link" href="./resume.html"style="color:black; font-weight: bold;">Resume</a>
         <a class="nav-itme nav-link" href="./gallery.html"style="color:black; font-weight: bold;">Portofolio</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" style="color:black; font-weight: bold;"role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           Projects
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="https://fidelis0788.github.io/hair-saloon-webside/">Hair Saloon website</a>
+            <a class="dropdown-item" href="https://fidelis0788.github.io/calculator-app-101/">Calculator app</a>
+            <a class="dropdown-item" href="https://fidelis0788.github.io/ACA_web101_fidele_maniragaba/">My first webpage</a>
+          </div>
+        </li>
       </div>
     </div>
   </nav>
+  <!-- hidden -->
 
+  <div class="hidden">
+    <i class="fa fa-twitter"style="font-size:24px"></i> 
+    <i class="fa fa-facebook-official"style="font-size:24px"></i>
+    <i class="fa fa-youtube" style="font-size:24px" ></i> 
+    <i class="fa fa-instagram"style="font-size:24px"></i>
+    <i class="fa fa-linkedin" style="font-size:24px" ></i> 
+  </div>
 
-
-
-
-
+<!-- hidden -->
   <img src="./myProfilepic.png" style="width: 200px;margin-top: 60px;border-radius: 100px ;border:3px solid rgb(112, 122, 112);height: 200px;margin-right: 20px;float: right;">
   <h1>I am Fidele, Student at Austin Coding Academy</h1>
   <h2>Web Development</h2>
@@ -87,7 +102,7 @@
        </div>
      </div>
      </a>
-     <a href="https://fidelis0788.github.io/101-AnimatePractice/">
+     <a href="https://fidelis0788.github.io/calculator-app-101/">
      <div class="container">
        <img src="./picture/igor-miske-JVSgcV8_vb4-unsplash.jpg" alt="" class="image" style="width:200px">
        <div class="middle">
