--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
     </nav>
   
    <section class="container">
-    <img src="./myProfilepic.png" alt="image" style="width: 500px;height: 300px;">
+    <img src="./Myprofile.png" alt="image" style="width: 300px;height: 300px;">
     <div>
      <p> Lorem ipsum dolor sit amet, consecteturplaceat est</P>
      <p>natus molestias labore deleniti. Dicta fuga aliquam </p>
@@ -36,13 +36,15 @@
      <p>aborum reprehenderit dolorum pestias labore deleniti. Dicta fuga </p>
      <p>tempore ex?t. Cumque, sunt? QuidLaborum incidunt voluptate </p> 
     </div>
-<!-- </section>
+</section>
     <section class="icon">
         <i class="fa fa-twitter"></i> 
-        <i class="fa fa-facebook-official"style="font-size:24px"></i>
+      <i class="fa fa-envelope"style="font-size:15px"></i>
+    <i class="fa fa-linkedin" style="font-size:15px"></i>
+      <i class="fa fa-facebook-official"style="font-size:24px"></i>
         <i class="fa fa-google-plus"style="font-size:24px"></i>
-        <i class="fa fa-pinterest"></i> 
-</section> -->
+        
+</section>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
