--- a/pages/resume.html
+++ b/pages/resume.html
@@ -25,7 +25,7 @@
             <a class="nav-item nav-link" href="./about.html"style="color:black; font-weight: bold;">About</a>
             <a class="nav-item nav-link" href="./contact.html"style="color:black; font-weight: bold;">Contact</a>
             <a class="nav-link active" href="./resume.html"style="color:rgb(76, 76, 138); font-weight: bold;">Resume<span class="sr-only">(current)</span></a>
-        <a class="nav-itme nav-link" href="./gallery.html"style="color:black; font-weight: bold;">Gallery</a>
+        <a class="nav-itme nav-link" href="./gallery.html"style="color:black; font-weight: bold;">Portofolio</a>
       </div>
     </div>
   </nav>
