--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -39,28 +39,28 @@
 </div>
  
     <div class="container">
-       <a href="">
-        <div class="text">CSS</div >
+       <a href="https://fidelis0788.github.io/ACA_web101_fidele_maniragaba/">
+        <div class="text">My first Webpages</div >
         <img src="./picture/6.jpg" alt="" class="image" style="width: 200px"> 
     </a>
-    <a href="">
-      <div class="text">Calculator app</div >
+    <a href="https://fidelis0788.github.io/Nasa-contact-page-3/">
+      <div class="text">Nasa Contact Page</div >
       <img src="./picture/igor-miske-JVSgcV8_vb4-unsplash.jpg" alt="" class="image" style="width: 200px"> 
   </a>
-  <a href="">
-    <div class="text">Responsive Design</div >
+  <a href="https://fidelis0788.github.io/hair-saloon-webside/">
+    <div class="text">Hair Saloon Website</div >
     <img src="./picture/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="" class="image" style="width: 200px"> 
 </a>
-<a href="">
-  <div class="text">HTML</div >
+<a href="https://fidelis0788.github.io/101-AnimatePractice/">
+  <div class="text">Animated Resume</div >
   <img src="./picture/7.jpg" alt="" class="image" style="width: 200px"> 
 </a>
-<a href="">
-  <div class="text">Javascript</div >
+<a href="https://fidelis0788.github.io/calculator-app-101/">
+  <div class="text">Calculator app</div >
   <img src="./picture/4.jpg" alt="" class="image" style="width: 200px"> 
 </a>
 <a href="">
-  <div class="text">Design</div >
+  <div class="text">Responsive Design</div >
   <img src="./picture/2.jpg" alt="" class="image" style="width: 200px"> 
 </a>
       </div>
