--- a/pages/index.html
+++ b/pages/index.html
@@ -63,11 +63,11 @@
   </div>
 <header><h1>Projects</h1></header>
 <section  class="main">
-  <a href="">
+  <a href="https://fidelis0788.github.io/ACA_web101_fidele_maniragaba/">
      <div class="container">
        <img src="./picture/2.jpg" alt="" class="image" style="width: 200px">
        <div class="middle">
-         <div class="text">My portofolio</div>
+         <div class="text">My first website</div>
          <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
        </div>
      </div> 
@@ -76,7 +76,7 @@
      <div class="container">
        <img src="./picture/4.jpg" alt="" class="image" style="width:200px">
        <div class="middle">
-         <div class="text">Portofolio</div> 
+         <div class="text">My first Portofolio</div> 
            <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
            </div>
        </div>
@@ -97,17 +97,16 @@
      <div class="container">
        <img src="./picture/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="" class="image" style="width:200px">
        <div class="middle">
-         <div class="text">hair Saloon website</div>
+         <div class="text">Hair Saloon website</div>
          <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
        </div>
      </div>
     </a>
-     <a href="https://fidelis0788.github.io/calculator-app-101/">
+     <a href="https://fidelis0788.github.io/101-AnimatePractice/">
       <div class="container">
        <img src="./picture/igor-miske-JVSgcV8_vb4-unsplash.jpg" alt="" class="image" style="width:200px">
        <div class="middle">
-         <div class="text">
-          Animate</div>
+         <div class="text"> Animated Resume</div>
           <p style="font-size: 40px;border: 1px solid ;border-radius: 20px;width: 40px; float: right;margin-top: 30px;">&#8250</p >
        </div>
      </div>
